[workspace]
members = ["package", "test", "macros"]

[workspace.dependencies]
cw-storage-plus = { version = "1.1.0"   }
cosmwasm-std    = { version = "1.1.0", features = ["cosmwasm_1_2"]}
cosmwasm-schema = { version = "1.1.0"   }
serde-cw-value  = { version = "0.7.0"   }
serde-json-wasm = { version = "0.5.1"   } 
base64          = { version = "0.21.2"  }
serde_json      = { version = "1.0.104" }
cw-multi-test   = { version = "0.16.5"  }
serde           = { version = "1.0" }
syn             = { version = "1", features = ["full", "printing", "extra-traits"] }
schemars        = { version = "0.8.3"}
