[workspace]
members            = ["package", "test", "macros"]

[workspace.dependencies]
cw-storage-plus    = { version = "1.1.0"   }
cosmwasm-std       = { version = "1.1.0", features = ["cosmwasm_1_2"]}
cosmwasm-schema    = { version = "1.1.0"   }
cw-asset           = { version = "3.1.0"   }
cw20               = { version = "1.1.0"   }
serde-cw-value     = { version = "0.7.0"   }
serde-json-wasm    = { version = "0.5.1"   } 
base64             = { version = "0.21.2"  }
serde_json         = { version = "1.0.104" }
cw-multi-test      = { version = "0.20.0"  }
serde              = { version = "1.0"     }
syn                = { version = "1", features = ["full", "printing", "extra-traits"] }
schemars           = { version = "0.8.3"   }
forward_ref        = { version = "1.0.0"   }
pyth-sdk-cw        = { version = "1.2.0"   }
anyhow             = { version = "1.0.75"  }

tokio              = { version = "1", features = ["full"] }
cosmos-grpc-client = "0.3.0"
async-trait        = "0.1.77"