[workspace]
members            = ["package", "test", "macros"]

[workspace.dependencies]
cw-storage-plus    = { version = "1"   }
cosmwasm-std       = { version = "1", features = ["cosmwasm_1_2"]}
cosmwasm-schema    = { version = "1"   }
cw-asset           = { version = "3"   }
cw20               = { version = "1"   }
serde-cw-value     = { version = "0.7"   }
serde-json-wasm    = { version = "0.5"   } 
base64             = { version = "0.21.2"  }
serde_json         = { version = "1.0.104" }
cw-multi-test      = { version = "0.20.0"  }
serde              = { version = "1.0"     }
syn                = { version = "1", features = ["full", "printing", "extra-traits"] }
schemars           = { version = "0.8.3"   }
forward_ref        = { version = "1.0.0"   }
pyth-sdk-cw        = { version = "1.2.0"   }

anyhow             = { version = "1.0.75"  }
thiserror          = { version = "1.0.57"  }
strum              = { version = "0.26.1"  }
strum_macros       = { version = "0.26.1"  }
prost              = { version = "0.12.3"  }

osmosis-std        = { version = "0.22.0"  }
injective-std      = { version = "1.12.10-testnet"  }

tokio              = { version = "1", features = ["full"] }
async-trait        = "0.1.77"

cosmos-grpc-client = "2.0.2"
