[package]
name            = "rhaki-cw-plus-macro"
version         = "0.3.0"
edition         = "2021"
license         = "Apache-2.0"
authors         = ["Rhaki"]
description     = "Macro for rhaki-cw-utils"
repository      = "https://github.com/Rhaki/rhaki-cw-plus"

[dependencies]
proc-macro2     = "1"
quote           = "1"
syn             = { version = "2.0.59", features = ["full", "printing", "extra-traits"] }

[lib]
proc-macro      = true
