[package]
name                = "rhaki-cw-plus"
version             = "0.8.8"
edition             = "2021"
license             = "Apache-2.0"
authors             = ["Rhaki"]
description         = "Advanced utils for cosmwasm contract"
repository          = "https://github.com/Rhaki/rhaki-cw-plus"

[features]
default = []
multi-test-helper   = ["dep:cw-multi-test", "dep:anyhow"]
deploy              = ["dep:cosmos-grpc-client", "dep:tokio", "dep:async-trait"]

[dependencies]
rhaki-cw-plus-macro = { path = "../macros", version = "0.1.0" }
cw-storage-plus     = { workspace = true, features = ["macro"] }
cosmwasm-std        = { workspace = true }
cosmwasm-schema     = { workspace = true }
cw-asset            = { workspace = true }
cw20                = { workspace = true }
serde-cw-value      = { workspace = true }
serde-json-wasm     = { workspace = true }
base64              = { workspace = true }
serde_json          = { workspace = true }
serde               = { workspace = true }
schemars            = { workspace = true }
forward_ref         = { workspace = true }
pyth-sdk-cw         = { workspace = true }

cw-multi-test       = { optional = true, workspace = true, features = ["cosmwasm_1_2"] }
anyhow              = { optional = true, workspace = true }

tokio               = { optional = true, workspace = true }
cosmos-grpc-client  = { optional = true, workspace = true }
async-trait         = { optional = true, workspace = true }