[package]
name                = "rhaki-cw-plus"
version             = "2.1.4"
edition             = "2021"
license             = "Apache-2.0"
authors             = ["Rhaki"]
description         = "Advanced utils for cosmwasm contract"
repository          = "https://github.com/Rhaki/rhaki-cw-plus"

[features]
default             = []
multi-test          = ["dep:cw-multi-test", "dep:anyhow", "dep:thiserror", "dep:strum", "dep:strum_macros"]
deploy              = ["dep:cosmos-grpc-client", "dep:tokio", "dep:async-trait", "dep:anyhow"]
osmosis             = ["multi-test", "dep:osmosis-std", "dep:prost"]
injective           = ["multi-test", "dep:injective-std", "dep:prost"]

[dependencies]
rhaki-cw-plus-macro = { path = "../macros", version = "0.2.1" }
cw-storage-plus     = { workspace = true, features = ["macro"] }
cosmwasm-std        = { workspace = true }
cosmwasm-schema     = { workspace = true }
cw-asset            = { workspace = true }
cw20                = { workspace = true }
serde-cw-value      = { workspace = true }
serde-json-wasm     = { workspace = true }
base64              = { workspace = true }
serde_json          = { workspace = true }
serde               = { workspace = true }
schemars            = { workspace = true }
forward_ref         = { workspace = true }
pyth-sdk-cw         = { workspace = true }

cw-multi-test       = { optional = true, workspace = true, features = ["cosmwasm_1_2"] }
anyhow              = { optional = true, workspace = true }
thiserror           = { optional = true, workspace = true } 
osmosis-std         = { optional = true, workspace = true }
injective-std       = { optional = true, workspace = true }
strum               = { optional = true, workspace = true }
strum_macros        = { optional = true, workspace = true }
prost               = { optional = true, workspace = true }

tokio               = { optional = true, workspace = true }
cosmos-grpc-client  = { optional = true, workspace = true }
async-trait         = { optional = true, workspace = true }