[package]
name            = "rhaki-cw-plus-test"
version         = "0.1.0"
edition         = "2021"
authors         = ["Rhaki"]
description     = "Test for advanced utils for cosmwasm contract"
repository      = "https://github.com/Rhaki/rhaki-cw-plus"

[dependencies]
rhaki-cw-plus   = { path = "../package" }
cw-storage-plus = { version = "1.1.0" }
cosmwasm-std    = { version = "1.1.0" }