[package]
name            = "rhaki-cw-plus-test"
version         = "0.1.0"
edition         = "2021"
authors         = ["Rhaki"]
description     = "Test for advanced utils for cosmwasm contract"
repository      = "https://github.com/Rhaki/rhaki-cw-plus"

[dependencies]
rhaki-cw-plus   = { path = "../package" }
cw-storage-plus = { workspace = true }
cosmwasm-std    = { workspace = true }
serde_json      = { workspace = true }
cosmwasm-schema = { workspace = true }
serde           = { workspace = true }

[dev.dependencies]
cw-multi-test   = { workspace = true }





